Fixed edit button alignment

--- a/force-app/main/default/lwc/hotelListSubheader/hotelListSubheader.css
+++ b/force-app/main/default/lwc/hotelListSubheader/hotelListSubheader.css
@@ -1,3 +1,29 @@
+.edit-button {
+  --slds-c-button-radius-border: 0%;
+  --slds-c-button-brand-color-background: #ffffff;
+  --slds-c-button-brand-color-background-active: #1c1c1c;
+  --slds-c-button-brand-color-background-hover: #1c1c1c;
+  --slds-c-button-shadow: 0px 0px 0px;
+  --slds-c-button-shadow-focus: 0px 0px 0px;
+  --slds-c-button-brand-text-color: #1c1c1c;
+  --slds-c-button-brand-text-color-active: #ffffff;
+  --slds-c-button-brand-text-color-hover: #ffffff;
+  --slds-c-button-brand-color-border: #1c1c1c;
+  --slds-c-button-brand-color-border-active: #1c1c1c;
+  --slds-c-button-brand-color-border-hover: #1c1c1c;
+  --slds-c-button-brand-spacing-inline-end: 45px;
+  --slds-c-button-brand-spacing-inline-start: 45px;
+  --slds-c-button-spacing-block-start: 5px;
+  --slds-c-button-spacing-block-end: 5px;
+  font-family: Swiss_Bold !important;
+  font-size: 16px;
+  font-weight: 5;
+}
+
+.dropdown-main {
+  z-index: 100;
+}
+
 @font-face {
   font-family: "Swiss_Bold";
   src: url("/resource/Swiss/_MI_Swiss721BT-BoldCondensed.otf")
